--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,10 @@ body {
     @apply p-1 hover:bg-gray-200 rounded hover:cursor-default;
   }
 
+  /* add to your @layer components */
+
+
+
   #welcome {
     @apply text-gray-200 flex flex-col justify-center items-center absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 select-none max-sm:h-screen max-sm:w-full max-sm:px-10;
 
@@ -275,7 +279,7 @@ body {
     }
 
     .gallery {
-      @apply p-5;
+      @apply p-5 ;
 
       ul {
         @apply grid grid-cols-5 grid-rows-5 gap-2.5;
@@ -402,4 +406,5 @@ body {
       }
     }
   }
-}
+} 
+
